# llm_builder_fun

./: .gitignore  GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
data/raw/: sample.txt
docs/: LLM_CHEAT_SHEET.md  TUTORIAL.md
scripts/: generate.py  prepare_corpus.py  train.py  train_tokenizer.py
src/llm_builder/: __init__.py  data.py  model.py  utils.py
