[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-builder"
version = "0.1.0"
description = "Starter project for training a small decoder-only language model from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
  "tokenizers>=0.15.0",
  "PyYAML>=6.0.1",
  "tqdm>=4.66.0",
  "numpy<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
